--- a/index.html
+++ b/index.html
@@ -2529,12 +2529,10 @@ canActivate: [IsLoggedInGuard]
 </h4>
 
 <ol>
-<li>Create the file src\environments\environment.local.ts file by right-clicking on the src\environments directory and selecting new file</li>
-</ol>
-<pre><code>```bash
-environment.local.ts
-```
-</code></pre><ol>
+<li><p>Create the file src\environments\environment.local.ts file by right-clicking on the src\environments directory and selecting new file</p>
+<pre><code class="lang-bash"> environment.local.ts
+</code></pre>
+</li>
 <li><p>Add the following to the environment.local.ts file</p>
 <pre><code class="lang-TypeScript"> export const environment = {
      production: false,
