change sentence fragment in VS Code install section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <p>Visual Studio Code is Microsoft lightweight cross platform IDE.  </p>
 <ol>
 <li>Download Visual Studio Code at <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a></li>
-<li>Once the download finishes, launch the installer except all of the defaults.</li>
+<li>Once the download finishes, launch the installer, and except all of the defaults.</li>
 </ol>
 <h3 id="node-js">Node.js</h3>
 <p>NodeJS is used to power the Angular CLI as well as install all of our dependencies.  The Angular CLI requires Node version 6.9 or greater.</p>
